# cs2024_ros_cpp_project

./: LICENSE  README.md
cpp_controller/: CMakeLists.txt  package.xml
cpp_controller/include/cpp_controller/: cpp_controller_node.h  cpp_controller_server.h
cpp_controller/src/: cpp_controller_node.cpp  cpp_controller_server.cpp
cpp_controller_msgs/: CMakeLists.txt  package.xml
cpp_controller_msgs/action/: WaypointFollowing.action
py_controller_client/: CMakeLists.txt  package.xml  setup.py
py_controller_client/src/py_controller_client/: waypoint_client.py
