<package>

	<name>py_controller_client</name>
	<version>0.0.1</version>
	<description>Just a simple Python action client.</description>

	<author email="sm2296@cornell.edu">Spyros Maniatopoulos</author>

	<maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
